<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddActivity">

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/input_image"
                android:alpha="0"/>

            <Button
                android:id="@+id/cameraButton"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/kamera"
                app:icon="@drawable/baseline_camera_alt_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addImage"
                android:alpha="0"
                tools:alpha="100"/>

            <Button
                android:id="@+id/galeriButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/galeri"
                app:layout_constraintBottom_toBottomOf="@+id/cameraButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cameraButton"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                app:icon="@drawable/baseline_image_24"
                android:alpha="0"
                tools:alpha="100"/>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/masukkan_deskripsi_disini"
                app:layout_constraintTop_toBottomOf="@+id/cameraButton"
                tools:layout_editor_absoluteX="15dp"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:alpha="0"
                tools:alpha="100"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        app:icon="@drawable/baseline_upload_24"
        android:alpha="0"
        tools:alpha="100"/>
</androidx.constraintlayout.widget.ConstraintLayout>